Ordered app.js (server script)

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,16 +2,46 @@
 <html>
 <head>
 	<title>If pokemon was unicorn</title>
+	<link rel="stylesheet" type="text/css" href="/public/style/index.css">
 </head>
 <body>
 	<header>
-		
+		<h1>If Pokémon Was Unicorn</h1>
 	</header>
-	<section>
-		
+	<section class="mainSection">
+		<div class="matchmakingSection">
+			<div class="login">
+				<form>
+					<label>User Name</label>
+					<input type="text" placeholder="User Name" />
+
+					<label>Password</label>
+					<input type="password" placeholder="User Name" />
+				</form>
+			</div>
+		</div>
+		<div class="battleSection">
+			<div class="battleWindow">
+				
+			</div>
+			<div class="battleCommands">
+				<div class="mainCommands">
+					<button id="attack1" class="mainCommand">Attack</button>
+					<button id="attack2" class="mainCommand">Pokémon</button>
+					<button id="attack3" class="mainCommand">Item</button>
+					<button id="attack4" class="mainCommand">Surrender</button>
+				</div>
+				<div class="attackCommands hidden">
+					<button id="attack1" class="attackCommand">Attack 1</button>
+					<button id="attack2" class="attackCommand">Attack 2</button>
+					<button id="attack3" class="attackCommand">Attack 3</button>
+					<button id="attack4" class="attackCommand">Attack 4</button>
+				</div>
+			</div>
+		</div>
 	</section>
 	<footer>
-		
+		Made by "Some Strange People"
 	</footer>
 </body>
 </html>
