--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,6 +1,9 @@
 html {
 	height: 100%;
 	font-family: sans-serif;
+
+	background-color: #FF63A4;
+	color: white;
 }
 
 body{
@@ -32,7 +35,25 @@ footer {
 	margin-right: auto;
 }
 
+.battleWindow {
+	width: 800px;
+	height: 400px;
+	background: #92DBEF;
+}
+
 .battleCommands {
+	transition: all 0.4s;
+}
+
+.battleCommands button {
+	margin: 0px;
+	padding: 0px;
+	width: 25%;
+	height: 50px;
+	/*border: none;*/
+}
+
+.mainCommand{
 	transition: all 0.4s;
 }
 
