Added Stats and Time-based attacks

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -59,10 +59,10 @@
 				--><button id="surrenderCommand" class="mainCommand" onclick="pokemonUMod.selectSurrender()">Give Up</button>
 				</div>
 				<div class="attackCommands hidden">
-					<button id="attack1" class="attackCommand">Attack 1</button>
-					<button id="attack2" class="attackCommand">Attack 2</button>
-					<button id="attack3" class="attackCommand">Attack 3</button>
-					<button id="attack4" class="attackCommand">Attack 4</button>
+					<button id="attack1" class="attackCommand" onclick="pokemonUMod.useMove(0)">Attack 1</button>
+					<button id="attack2" class="attackCommand" onclick="pokemonUMod.useMove(1)">Attack 2</button>
+					<button id="attack3" class="attackCommand" onclick="pokemonUMod.useMove(2)">Attack 3</button>
+					<button id="attack4" class="attackCommand" onclick="pokemonUMod.useMove(3)">Attack 4</button>
 				</div>
 			</div>
 		</div>
