Enemies are finally showing !!!!!!!

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -46,12 +46,12 @@
 						<div id="enemyUsedAction" class="usedActionText">Used Tackle</div>
 					</div>
 					<div id="enemySprite" class="pokemonSprite">
-						<img src="/public/img/battlers/front/001.png">
+						<img id="enemyImageSprite" src="/public/img/battlers/front/001.png">
 					</div>
 				</div>
 				<div class="playerSection">
 					<div id="playerSprite" class="pokemonSprite">
-						<img src="/public/img/battlers/back/007b.png">
+						<img id="playerImageSprite" src="/public/img/battlers/back/007b.png">
 					</div>
 					<div class="statusBar">
 						<div id="playerPokemonName" class="pokemonName">Carapuce Nv.5</div>
